# 22s-pa02-mastersofgoogle

./: CMakeLists.txt  README.md  SortingAlgorithms.cpp  SortingAlgorithms.h  main.cpp
DatasetGeneration/: main.py
DatasetGeneration/datasets/: 60%_sorted_no_duplicates_1000.txt  60%_sorted_no_duplicates_10000.txt  60%_sorted_no_duplicates_100000.txt  60%_sorted_no_duplicates_25000.txt  60%_sorted_no_duplicates_5000.txt  60%_sorted_no_duplicates_50000.txt  randomized_20%_duplicates_1000.txt  randomized_20%_duplicates_10000.txt  randomized_20%_duplicates_100000.txt  randomized_20%_duplicates_25000.txt  randomized_20%_duplicates_5000.txt  randomized_20%_duplicates_50000.txt  randomized_40%_duplicates_1000.txt  randomized_40%_duplicates_10000.txt  randomized_40%_duplicates_100000.txt  randomized_40%_duplicates_25000.txt  randomized_40%_duplicates_5000.txt  randomized_40%_duplicates_50000.txt  randomized_no_duplicates_1000.txt  randomized_no_duplicates_10000.txt  randomized_no_duplicates_100000.txt  randomized_no_duplicates_25000.txt  randomized_no_duplicates_5000.txt  randomized_no_duplicates_50000.txt
DatasetGeneration/int_datasets/: 60%_sorted_no_duplicates_1000.txt  60%_sorted_no_duplicates_10000.txt  60%_sorted_no_duplicates_100000.txt  60%_sorted_no_duplicates_25000.txt  60%_sorted_no_duplicates_5000.txt  60%_sorted_no_duplicates_50000.txt  randomized_20%_duplicates_1000.txt  randomized_20%_duplicates_10000.txt  randomized_20%_duplicates_100000.txt  randomized_20%_duplicates_25000.txt  randomized_20%_duplicates_5000.txt  randomized_20%_duplicates_50000.txt  randomized_40%_duplicates_1000.txt  randomized_40%_duplicates_10000.txt  randomized_40%_duplicates_100000.txt  randomized_40%_duplicates_25000.txt  randomized_40%_duplicates_5000.txt  randomized_40%_duplicates_50000.txt  randomized_no_duplicates_1000.txt  randomized_no_duplicates_10000.txt  randomized_no_duplicates_100000.txt  randomized_no_duplicates_25000.txt  randomized_no_duplicates_5000.txt  randomized_no_duplicates_50000.txt
DatasetGeneration/string_datasets/: 60%_sorted_no_duplicates_1000.txt  60%_sorted_no_duplicates_10000.txt  60%_sorted_no_duplicates_100000.txt  60%_sorted_no_duplicates_25000.txt  60%_sorted_no_duplicates_5000.txt  60%_sorted_no_duplicates_50000.txt  randomized_20%_duplicates_1000.txt  randomized_20%_duplicates_10000.txt  randomized_20%_duplicates_100000.txt  randomized_20%_duplicates_25000.txt  randomized_20%_duplicates_5000.txt  randomized_20%_duplicates_50000.txt  randomized_40%_duplicates_1000.txt  randomized_40%_duplicates_10000.txt  randomized_40%_duplicates_100000.txt  randomized_40%_duplicates_25000.txt  randomized_40%_duplicates_5000.txt  randomized_40%_duplicates_50000.txt  randomized_no_duplicates_1000.txt  randomized_no_duplicates_10000.txt  randomized_no_duplicates_100000.txt  randomized_no_duplicates_25000.txt  randomized_no_duplicates_5000.txt  randomized_no_duplicates_50000.txt  sorted_no_duplicates_10000.txt  sorted_no_duplicates_100000.txt  sorted_no_duplicates_25000.txt  sorted_no_duplicates_5000.txt  sorted_no_duplicates_50000.txt
output/: 60%_sorted_no_duplicates_int_output.csv  60%_sorted_no_duplicates_string_output.csv  randomized_20%_duplicates_int_output.csv  randomized_20%_duplicates_string_output.csv  randomized_40%_duplicates_int_output.csv  randomized_40%_duplicates_string_output.csv  randomized_no_duplicates_int_output.csv  randomized_no_duplicates_string_output.csv  sorted_no_duplicates_int_output.csv  sorted_no_duplicates_string_output.csv
src/: SortingAlgorithms.h  main.cpp
